fixed Database/ Dependencies